--- a/main.html
+++ b/main.html
@@ -23,7 +23,7 @@
     }
 
     if (secondMax === -Infinity) {
-        return "-Infinity";
+        return -Infinity;
     } else {
         return secondMax;
     }
